<resources>
    <string name="app_name" translatable="false">Cook</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">email</string>
    <string name="password">password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="cook_name">Name</string>

    <string name="create_recipe">Create Recipe +</string>
    <string name="my_builds">My Builds</string>
    <string name="favourites">Favourites</string>
    <string name="sort">Sort</string>
    <string name="products_list">Products List</string>
    <string name="ranking" translatable="false">Ranking</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="spices">Spices</string>
    <string name="calories" translatable="false">1000</string>
    <string name="nutrition">D3</string>
    <string name="allergic">No</string>
    <string name="item1">Tomato</string>
    <string name="item2">Paprika</string>
    <string name="item3">Cucumber</string>
    <string name="item4">Orange</string>
    <string name="item5">Apple</string>
    <string name="item6">Pineapple</string>
    <string name="item7">Salt</string>
    <string name="item8">Pepper</string>
    <string name="item9">Cinnamon</string>
    <string name="stat1" translatable="false">1000</string>
    <string name="stat2" translatable="false">B6</string>
    <string name="stat3">No</string>

    <string name="search">Which ingredient are you looking for?</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_short_description">Recipe description</string>
    <string name="owner" translatable="false">BR</string>
    <string name="date" translatable="false">10.10.2010</string>
    <string name="number_of_comments" translatable="false">10</string>
    <string name="number_of_views" translatable="false">289</string>
    <string name="favourites_times" translatable="false">4</string>
    <string name="calories_full_name">" <u>Calories</u>"
    </string>
    <string name="allergic_full_name">
        <u>Allergic</u>
    </string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="sign_in">Sign In</string>
    <string name="product_name">Product Name</string>
    <string name="full_product_name">Full Product Name</string>
    <string name="product_description">Description</string>
    <string name="product">Product</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="background_name">Hello Drawer Example!</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="page_new">New</string>
    <string name="popular">Popular</string>
    <string name="for_you">For you</string>
    <string name="last_seen">Last Seen</string>
    <string name="creator">Creator: </string>
    <string name="name">Name:</string>
    <string name="page_date">Date:</string>
    <string name="category1">Category1</string>
    <string name="category2">Category2</string>
    <string name="category3">Category3</string>
    <string name="Register">Register</string>
    <string name="nutrition_full_name">
        <u>Nutrients</u>
    </string>
    <string name="my_recipes">My Recipes</string>

    <string name="category_prompt">Choose a category</string>
    <string name="submit">Submit</string>
    <string name="kitchen_white_sea_salt">Kitchen white sea salt</string>
    <string name="description_salt">Salt used for cooking</string>
    <string name="delete">Delete</string>
    <string name="like">Like!</string>
    <string name="detail">Detail</string>
    <string name="edit">Edit</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="SortByLike">SortByLike</string>
    <string name="SortByName">Sort by Name</string>
    <string name="search_by_name">Search By Name</string>
    <string name="search_by_like">Search By Like</string>

    <string-array name="category_arrays">
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Spices</item>
    </string-array>
</resources>
