<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="#f3e5ab">


    <android.support.v7.widget.CardView android:layout_width="370dp"
                                        android:layout_height="200dp"
                                        android:layout_marginStart="5dp"
                                        android:layout_marginTop="10dp"
                                        android:id="@+id/cardfav1"


    >
        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/item2"
                tools:srcCompat="@tools:sample/avatars[10]"
                />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_gravity="end"
                android:text="@string/creator"
                android:layout_marginTop="50dp"
                android:id="@+id/editText3"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_gravity="end"
                android:text="@string/name"
                android:ems="10"
                android:id="@+id/editText"
                />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_gravity="end"
                android:layout_marginTop="100dp"
                android:text="@string/page_date"
                android:ems="10"
                android:id="@+id/editText2"/>
        <TextView
                android:text="@string/category1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_marginTop="100dp"
                android:layout_marginStart="24dp"/>
        <TextView
                android:text="@string/category2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_marginTop="120dp"
                android:layout_marginStart="24dp"/>
        <TextView
                android:text="@string/category3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:layout_marginTop="140dp"
                android:layout_marginStart="24dp"/>


    </android.support.v7.widget.CardView>


    <FrameLayout  android:id="@+id/fragmentContainer" android:layout_width="0dp" android:layout_height="0dp">

    </FrameLayout>




</RelativeLayout>