<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/products_list"
            android:layout_width="241dp"
            android:layout_height="61dp"
            android:textSize="38sp"
            android:id="@+id/textView2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view" android:layout_marginStart="72dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="71dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_chainStyle="spread_inside"/>
    <View
            android:layout_width="368dp"
            android:layout_height="4dp"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            android:background="@android:color/darker_gray"
            android:id="@+id/view" android:layout_marginTop="72dp"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toTopOf="@+id/view"
                 app:layout_constraintStart_toStartOf="@+id/view"
                 android:stretchColumns="*" android:layout_marginTop="112dp" android:id="@+id/tableLayout">

        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:text="@string/vegetables"
                    android:textSize="23sp"
                    android:padding="3dip" android:layout_width="153dp"/>
            <TextView
                    android:layout_column="2"
                    android:text="@string/calories"
                    android:textStyle="bold"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="2"
                    android:text="@string/nutrition"
                    android:textStyle="bold"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="2"
                    android:text="@string/allergic"
                    android:textStyle="bold"
                    android:padding="3dip"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:text="@string/item1"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat1"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat2"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat3"
                    android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:text="@string/item2"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat1"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat2"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat3"
                    android:padding="3dip"/>
        </TableRow>

        <View
                android:layout_height="2dp"
                android:background="#FF909090"/>

        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:text="@string/fruits"
                    android:textSize="23sp"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="2"
                    android:text="@string/calories"
                    android:textStyle="bold"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="2"
                    android:text="@string/nutrition"
                    android:textStyle="bold"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="2"
                    android:text="@string/allergic"
                    android:textStyle="bold"
                    android:padding="3dip"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:text="@string/item3"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat1"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat2"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat3"
                    android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:text="@string/item4"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat1"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat2"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat3"
                    android:padding="3dip"/>
        </TableRow>

        <View
                android:layout_height="2dp"
                android:background="#FF909090"/>

        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:text="@string/spices"
                    android:textSize="20sp"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="2"
                    android:text="@string/calories"
                    android:textStyle="bold"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="2"
                    android:text="@string/nutrition"
                    android:textStyle="bold"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="2"
                    android:text="@string/allergic"
                    android:textStyle="bold"
                    android:padding="3dip"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:text="@string/item5"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat1"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat2"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat3"
                    android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:text="@string/item6"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat1"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat2"
                    android:padding="3dip"/>
            <TextView
                    android:layout_column="1"
                    android:text="@string/stat3"
                    android:padding="3dip"/>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>