<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="wrap_content"
              tools:context=".ProductFragment"
              android:background="#f3e5ab">


    <RelativeLayout android:layout_width="match_parent" android:layout_height="1080dp" android:id="@+id/product_container">

        <ImageView
                android:layout_width="120dp"
                android:layout_margin="20dp"
                android:layout_height="120dp" tools:srcCompat="@drawable/salt"
                android:id="@+id/imageView" />

        <TextView android:layout_width="match_parent"
                  android:text="@string/item7"
                  android:textSize="30sp"
                  android:layout_height="wrap_content" android:layout_toEndOf="@id/imageView"
                  android:layout_alignTop="@id/imageView"
                  android:id="@+id/product_name"
                  android:layout_marginTop="40dp"/>


        <TextView android:layout_width="wrap_content"
                  android:textSize="20sp"
                  android:text="@string/description_salt"
                  android:layout_below="@id/imageView"
                  android:id="@+id/description"
                  android:layout_margin="5dp"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/calories_full_name"
                  android:layout_marginTop="10dp"
                  android:layout_marginStart="40dp"
                  android:id="@+id/calories"
                  android:textSize="17sp"
                  android:layout_below="@id/description"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/nutrition_full_name"
                  android:layout_toEndOf="@id/calories"
                  android:layout_marginTop="10dp"
                  android:layout_marginStart="50dp"
                  android:id="@+id/nutrition"
                  android:textSize="17sp"
                  android:layout_below="@id/description"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/allergic_full_name"
                  android:layout_toEndOf="@id/nutrition"
                  android:layout_marginTop="10dp"
                  android:layout_marginStart="50dp"
                  android:id="@+id/allergic"
                  android:textSize="17sp"
                  android:layout_below="@id/description"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/calories"
                  android:id="@+id/cal_number"
                  android:textAlignment="center"
                  android:layout_marginTop="5dp"
                  android:layout_marginStart="13dp"
                  android:textSize="17sp"
                  android:layout_below="@id/calories"
                  android:layout_height="wrap_content" android:layout_alignStart="@id/calories"
                  android:layout_marginEnd="11dp" android:layout_alignEnd="@id/calories"/>

        <TextView android:layout_width="56dp"
                  android:text="@string/nutrition"
                  android:textSize="17sp"
                  android:layout_below="@id/calories"
                  android:textAlignment="center"
                  android:layout_height="wrap_content" android:layout_alignStart="@id/nutrition"
                  android:layout_marginEnd="4dp" android:layout_alignEnd="@id/nutrition"
                  android:layout_marginStart="5dp" android:layout_marginTop="4dp"/>

        <TextView android:layout_width="56dp"
                  android:text="@string/allergic"
                  android:textSize="17sp"
                  android:layout_below="@id/calories"
                  android:textAlignment="center"
                  android:layout_height="wrap_content" android:layout_alignStart="@id/allergic"
                  android:layout_marginEnd="4dp" android:layout_alignEnd="@id/allergic"
                  android:layout_marginStart="5dp" android:layout_marginTop="4dp"/>

    </RelativeLayout>
</LinearLayout>