<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomePage" tools:layout_editor_absoluteY="81dp">

    <Button
            android:text="@string/create_recipe"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:id="@+id/create_recipe_button_side_panel"
            tools:layout_editor_absoluteY="80dp"
            android:layout_marginTop="69dp"
            android:layout_marginBottom="121dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/my_builds_button_side_panel" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/my_builds"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:id="@+id/my_builds_button_side_panel"
            app:layout_constraintStart_toStartOf="@+id/create_recipe_button_side_panel" app:layout_constraintEnd_toEndOf="@+id/create_recipe_button_side_panel"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/create_recipe_button_side_panel"/>
    <Button
            android:text="@string/favourites"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:id="@+id/favourites_button_side_panel"
            app:layout_constraintStart_toStartOf="@+id/my_builds_button_side_panel"
            app:layout_constraintTop_toBottomOf="@+id/my_builds_button_side_panel"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="@+id/my_builds_button_side_panel"/>
    <Button
            android:text="@string/ranking"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:id="@+id/ranking_button_side_panel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/favourites_button_side_panel"
            app:layout_constraintStart_toStartOf="@+id/favourites_button_side_panel"
            app:layout_constraintEnd_toEndOf="@+id/favourites_button_side_panel"/>
    <Button
            android:text="@string/products_list"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:id="@+id/products_list_button_side_panel"
            app:layout_constraintStart_toStartOf="@+id/ranking_button_side_panel" app:layout_constraintEnd_toEndOf="@+id/ranking_button_side_panel"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ranking_button_side_panel"/>

</android.support.constraint.ConstraintLayout>