<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f3e5ab">

    <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f3e5ab">


            <TextView
                    android:text="@string/ranking"
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/recipeText"/>

         <SearchView android:layout_margin="2dp"
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/recipeText"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/sort_name_button"
                android:layout_below="@id/search"
                android:text="@string/search_by_name"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/sort_like_button"
                android:layout_below="@id/search"
                android:text="@string/search_by_like"
                android:layout_toEndOf="@id/sort_name_button"/>
        <ListView
                android:id="@+id/recipe_list_view"
                android:layout_width="wrap_content"
                android:layout_height="600dp"
                android:layout_below="@id/sort_name_button"
        />
    </RelativeLayout>
</ScrollView>